--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,7 +36,8 @@
 
     <hr />
 
-    <!-- TODO #2 - Loop over jobs map to display all job fields uses {jobs} to list them out-->
+    <!-- TODO #2 - COMPLETE - Loop over jobs map to display all job fields -->
+
     <div th:if="${jobs}">
         <div th:replace="fragments :: results"></div>
     </div>
