--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,7 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - COMPLETE - Use the same list display from search.html -->
+   <!-- use code from problem 2 make sure model.addAttribute() param keys match up -->
     <div th:replace="fragments :: results"></div>
 </div>
 
